# lean-aristotle-mcp

./: .actrc  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARISTOTLE_MCP_DESIGN.md  USER_STORIES.md
src/aristotle_mcp/: __init__.py  __main__.py  mock.py  models.py  server.py  tools.py
stubs/aristotlelib/: __init__.pyi
tests/: __init__.py  test_api.py  test_api_tools.py  test_edge_cases.py  test_helpers.py  test_mock.py
tests/fixtures/: example.lean
tests/lean_project/: TestProject.lean  lake-manifest.json  lakefile.lean
tests/lean_project/TestProject/: Arithmetic.lean  Basic.lean
